--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.7.2",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-indiana-drag-scroll": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
