--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
     "react-hooks/exhaustive-deps": "off",
     "import/prefer-default-export": "off",
     "radix": "off",
-    "jsx-a11y/click-events-have-key-events": "off"
+    "jsx-a11y/click-events-have-key-events": "off",
+    "no-console": "warn"
   }
 }
