🐛 Fix: remote 이미지 경로 추가

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
   "env": {
     "node": true
   },
+  "ignorePatterns": ["next.config.mjs"],
   "extends": [
     "plugin:@typescript-eslint/recommended",
     "airbnb",
